<resources>
    <string name="app_name" translatable="false">إدارة المهمات شامل</string>
    <string name="usertxtname">UserName</string>
    <string name="passtxtname">Password</string>
    <string name="logtxtname">Login</string>
    <string name="UsertxtName">UserName</string>
    <string name="txtusername" />
    <string name="passtxtname1">1</string>
    <string name="series">تسلسل</string>
    <string name="Section">القسم</string>
    <string name="name">الاسم</string>
    <string name="Staff">فريق العمل</string>
    <string name="point">نقطة الانطلاق</string>
    <string name="Location">الموقع</string>
    <string name="monitoring_team">فريق الدعم</string>
    <string name="drivers_name">اسم السائق</string>
    <string name="Safety_Security">الأمن والسلامة</string>
    <string name="Administration">الإدارة</string>
    <string name="comments">تعليقات</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num10">10</string>
    <string name="num11">11</string>
    <string name="num12">12</string>
    <string name="num13">13</string>
    <string name="num14">14</string>
    <string name="num15">15</string>
    <string name="num16">16</string>
    <string name="num17">17</string>
    <string name="num18">18</string>
    <string name="num19">19</string>
    <string name="num20">20</string>
    <string name="num21">21</string>
    <string name="addtask">إضافة مهمة</string>
    <string name="target">الهدف</string>
    <string name="date">التاريخ</string>
    <string name="edittask">إرسال المهمة</string>
    <string name="Abrov">الموافقة</string>
    <string name="Abrovby">تمت الموافقة</string>
    <string-array name="Sections">اختر
        <item>WFP</item>
        <item>Agriculture</item>
        <item>التعليم</item>
        <item>الحماية</item>
        <item>المراقبة</item>
        <item>الطوارئ</item>
        <item>الأمن والسلامة</item>
        <item>اللوجستي</item>
        <item>المالي</item>
        <item>الموارد البشرية</item>
        <item>المساءلة</item>
        <item>الإعلامي</item>
        <item>المعلومات</item>
        <item>الإدارة</item>
    </string-array>
    <string-array name="nameall">اختر
        <item>إياد خالد</item>
        <item>وليد شيخ يوسف</item>
        <item>سامر هويش</item>
        <item>سامر هويش</item>
        <item>محمد الحسن</item>
        <item>عبد الله الخشن</item>
        <item>أسامة اليماني</item>
        <item>إياس عبد العال</item>
        <item>أكرم الخشن</item>
        <item>عبد الحميد السليم</item>
        <item>سامر معتوق</item>
        <item>مصطفى دلو</item>
        <item>أحمد التركي</item>
        <item>محمود دلو</item>
        <item>علي كنجو</item>
        <item>وحيد الخالد</item>
        <item>عمار الأحمد</item>
        <item>أحمد الخالد</item>
        <item>تميم احمدو</item>
        <item>رشا زيتون</item>
    </string-array>
    <string-array name="point">اختر
        <item>من المكتب</item>
        <item>مباشر</item>
    </string-array>
    <string name="title_activity_add_task">Add_Task</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>