<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="388dp"
                    android:layout_height="2dp"
                    android:background="#7ABB41">

                    <TextView
                        android:id="@+id/editTextNumber"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:text="@string/series" />

                    <TextView
                        android:id="@+id/id1"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:text="@string/Section"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/id3"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/name"
                        android:textColor="#000000"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/editTextTextPersonName"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:text="@string/Staff" />

                    <TextView
                        android:id="@+id/editTextTextPersonName2"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:text="@string/Location" />

                    <TextView
                        android:id="@+id/editTextTextPersonName3"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="97dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:text="@string/monitoring_team" />

                    <TextView
                        android:id="@+id/editTextTextPersonName4"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:text="@string/drivers_name" />

                    <TextView
                        android:id="@+id/editTextTextPersonName5"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/Safety_Security" />

                    <TextView
                        android:id="@+id/editTextTextPersonName6"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/Administration" />

                    <TextView
                        android:id="@+id/editTextTextPersonName7"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/comments" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passtxtname1" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/Sections"
                        tools:ignore="TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="الموافقة"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="الموافقة"
                        tools:ignore="TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/editTextTextPersonName13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="33dp" />
            </TableLayout>
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>